<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical" >
    
<EditText 
    android:id="@+id/editTextPersonName"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/ETextHint"
    android:inputType="textPersonName" />

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
<Button 
    android:id="@+id/ok_button"
    android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_weight="50"
    android:text="@string/ok_button"    
    />
<Button 
    android:id="@+id/cancel_button"
    android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_weight="50"
    android:text="@string/cancel_button" 
    />
</LinearLayout>

</LinearLayout>


